# pypowsybl-jupyter

./: .coveragerc  .eslintignore  .eslintrc.cjs  .gitignore  MANIFEST.in  README.md  codecov.yml  esbuild.mjs  install.json  jest.config.js  package-lock.json  package.json  pypowsybl-jupyter.json  pypowsybl_jupyter.json  pyproject.toml  pytest.ini  setup-jest.js  setup.py  webpack.config.js
.github/workflows/: build.yml  dev-ci.yml  full-ci.yml
css/: svgsldwidget.css  svgwidget.css  widget.css
docs/: README.md  conf.py  index.md  requirements.txt
docs/getting_started/: index.md
docs/user_guide/: index.md  nad_explorer.md  nad_time_series.md  nad_widget.md  network_explorer.md  network_map_widget.md  sld_widget.md
examples/: 1_deltaP.ipynb  2_securityAnalysis.ipynb  3_timeseries.ipynb  4_targetV.ipynb  angles.ipynb  deltaP.ipynb  demo_adaptive_text_zoom.ipynb  demo_customized_hover_popup.ipynb  demo_mapviewer.ipynb  demo_mapviewer_features.ipynb  demo_nad_explorer.ipynb  demo_nad_features.ipynb  demo_nad_series.ipynb  demo_nad_simple.ipynb  demo_nad_time_series.ipynb  demo_network_explorer.ipynb  demo_network_explorer_filter_function.ipynb  demo_network_explorer_nadprofile.ipynb  demo_simple.ipynb  demo_simple_explorer.ipynb  demo_sld.ipynb  demo_sld_explorer.ipynb  demo_sld_features.ipynb  demo_sld_navigator.ipynb  demo_sld_simple.ipynb  demo_vl_explorer.ipynb  network_comparator.ipynb  securityAnalysis.ipynb  targetV.ipynb  timeseries.ipynb
examples/data/: demo_geo1.xml
js/: comparatorwidget.css  comparatorwidget.ts  nadwidget.css  nadwidget.ts  networkmapwidget.css  networkmapwidget.jsx  nominal-voltage-filter.jsx  popupinfo.ts  popupmenu.ts  sldwidget.css  sldwidget.ts  svgwidget.css  svgwidget.ts  voltage-level-choice.jsx
pypowsybl_jupyter/: __init__.py  _frontend.py  _version.py  explorer.py  explorersld.py  svg.py  svgsld.py  svgsldwidget.py  svgwidget.py
pypowsybl_jupyter/nbextension/: extension.js
pypowsybl_jupyter/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  plugin.ts  svgsldwidget.ts  svgwidget.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts  utils.ts
src/pypowsybl_jupyter/: __init__.py  assets.py  comparatorwidget.py  explorer.py  nadexplorer.py  nadtimeseries.py  nadwidget.py  networkexplorer.py  networkmapwidget.py  selectcontext.py  sldexplorer.py  sldnavigator.py  sldwidget.py  svgsldwidget.py  svgwidget.py  util.py  vlexplorer.py
