[build-system]
requires = [
    "hatchling>=1.21.1",
    "jupyterlab>=4.0.0,<5",
    "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "pypowsybl_jupyter"
description = "Widgets for pypowsybl in Jupyter notebooks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Sylvain Leclerc", email = "sylvain.leclerc@rte-france.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ipywidgets>=8.0.0",
    "pypowsybl>=1.1.0",
]
version = "0.1.0"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/powsybl/pypowsybl-jupyter"
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build]
artifacts = [
    "pypowsybl_jupyter/nbextension/index.*",
    "pypowsybl_jupyter/labextension/*.tgz",
    "pypowsybl_jupyter/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"pypowsybl_jupyter/nbextension" = "share/jupyter/nbextensions/pypowsybl_jupyter"
"pypowsybl_jupyter/labextension" = "share/jupyter/labextensions/pypowsybl_jupyter"
"./install.json" = "share/jupyter/labextensions/pypowsybl_jupyter/install.json"
"./pypowsybl_jupyter.json" = "etc/jupyter/nbconfig/notebook.d/pypowsybl_jupyter.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "pypowsybl_jupyter/nbextension/index.js",
    "pypowsybl_jupyter/labextension/package.json",
]
skip-if-exists = [
    "pypowsybl_jupyter/nbextension/index.js",
    "pypowsybl_jupyter/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.3",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "pypowsybl_jupyter/_version.py" },
]

[tool.tbump.version]
current = "0.1.0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
